--- a/expensify-app/package.json
+++ b/expensify-app/package.json
@@ -30,6 +30,7 @@
     "react-modal": "2.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "16.0.0",
     "redux": "^4.0.4",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
