--- a/expensify-app/.env.test
+++ b/expensify-app/.env.test
@@ -1,6 +1,6 @@
-FIREBASE_API_KEY=AIzaSyA4UVZIYoXEX_gvKcLBQU1KhAQcQScIaaw
-FIREBASE_AUTH_DOMAIN=expensify-a0641.firebaseapp.com
-FIREBASE_DATABASE_URL=https://expensify-a0641.firebaseio.com
-FIREBASE_PROJECT_ID=expensify-a0641
-FIREBASE_STORAGE_BUCKET=expensify-a0641.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=335277010251
+FIREBASE_API_KEY=AIzaSyD6MJbZjLVEdMAE4iCA1awiq1_mZQFvHG0
+FIREBASE_AUTH_DOMAIN=expensify-test-d7c94.firebaseapp.com
+FIREBASE_DATABASE_URL=https://expensify-test-d7c94.firebaseio.com
+FIREBASE_PROJECT_ID=expensify-test-d7c94
+FIREBASE_STORAGE_BUCKET=expensify-test-d7c94.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=625842109532
